--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,9 @@ indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 end_of_line = lf
+
+[*.md]
+trim_trailing_whitespace = false
+insert_final_newline = true
+max_line_length = off
+
