--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ trim_trailing_whitespace = true
 end_of_line = lf
 
 [*.md]
-trim_trailing_whitespace = false
+trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = off
